add coustom exceptions